--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -1,3 +1,64 @@
 #home {
-    background: url("../images/pizzaBackground.webp");
+    background: url("../images/pizzaBackground.webp") center no-repeat ;
+    background-size: cover;
+    width: 100%;
+    height: 80vh;
+}
+
+.cta {
+    background-image: linear-gradient(to bottom, #000 20%, transparent);
+    color: var(--white);
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    padding: 2em 4em;
+}
+
+.title {
+    font-size: 3em;
+    margin-top: 3em;
+}
+
+.title span {
+    color: transparent;
+    text-align: center;
+    -webkit-text-stroke: 1px var(--white);
+}
+
+.description {
+    max-width: 800px;
+    text-align: center;
+    font-size: 1em;
+}
+
+#ctaButtons {
+    color: var(--grayLight);
+    border: none;
+    border-radius: 15px;
+}
+
+#ctaButtons:hover {
+    background-color: var(--secundaryHover);
+    color: var(--white);
+}
+
+#ctaButtons a {
+    text-decoration: none;
+}
+
+.socialMediaButtons {
+    width: 150px;
+    display: flex;
+    justify-content: space-between;
+    font-size: 1.2em;
+}
+
+.socialMediaButtons a {
+    color: var(--grayLight);
+}
+
+.socialMediaButtons a:hover {
+    color: var(--secundary);
 }
