--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -17,7 +17,8 @@
     box-sizing: border-box;
 }
 
-body {
+html, body {
+    width: 100%;
     background-color: var(--primary);
     overflow-x: hidden;
 }
