--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -2,7 +2,7 @@
     background: url("../images/pizzaBackground.webp") center no-repeat ;
     background-size: cover;
     width: 100%;
-    height: 80vh;
+    height: 35em;
 }
 
 .cta {
@@ -19,6 +19,7 @@
 .title {
     font-size: 3em;
     margin-top: 3em;
+    text-align: center;
 }
 
 .title span {
@@ -29,6 +30,7 @@
 
 .description {
     max-width: 800px;
+    color: var(--grayLight);
     text-align: center;
     font-size: 1em;
 }
@@ -37,6 +39,7 @@
     color: var(--grayLight);
     border: none;
     border-radius: 15px;
+    transition: all .5s ease;
 }
 
 #ctaButtons:hover {
@@ -57,8 +60,16 @@
 
 .socialMediaButtons a {
     color: var(--grayLight);
+    transition: all .5s ease;
 }
 
 .socialMediaButtons a:hover {
     color: var(--secundary);
+    transform: translateY(-5px);
+}
+
+@media screen and (max-width: 600px) {
+    #home {
+        height: 100vh;
+    }
 }
