--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -70,6 +70,11 @@
 
 @media screen and (max-width: 600px) {
     #home {
-        height: 100vh;
+        height: 50em;
+    }
+
+    .title {
+        font-size: 2em;
+        margin-top: 2em; 
     }
 }
