--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -12,13 +12,12 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-around;
-    padding: 2em 4em;
+    justify-content: space-between;
+    padding: 8em 4em;
 }
 
 .title {
     font-size: 3em;
-    margin-top: 3em;
     text-align: center;
 }
 
@@ -74,7 +73,6 @@
     }
 
     .title {
-        font-size: 2.5em;
-        margin-top: 2.5em; 
+        font-size: 2.5em; 
     }
 }
