--- a/src/styles/delivery.css
+++ b/src/styles/delivery.css
@@ -1,31 +1,47 @@
 #delivery {
-    max-width: 800px;
-    margin: auto;
+    max-width: 1000px;
+    padding: 28px 8%;
+    margin: 2em auto 0;
 }
 
 .subtitle {
     color: var(--white);
-    font-size: 1.2em;
+    text-align: center;
+    font-size: 1.5em;
+    margin: 2em 0;
 }
 
 #servicesList {
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-around;
+    gap: 1em;
+    list-style: none;
+    flex-wrap: wrap;
 }
 
 .servicesItem {
-
+    width: 150px;
+    height: 150px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+    margin: 1.5em 0;
 }
 
-.servicesItem {
-
+.servicesItem i {
+    color: var(--secundary);
+    font-size: 2em;
 }
 
-.servicesItem {
-    
+.servicesItem h3 {
+    color: var(--grayLight);
+    font-size: 0.9em;
 }
 
 .servicesItem p {
-    font-size: 0.8em;
+    color: var(--grayLight);
+    font-size: 0.7em;
+    text-align: center;
 }
