--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -38,6 +38,7 @@
     color: var(--grayLight);
     border: none;
     border-radius: 15px;
+    box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.6);
     transition: all .5s ease;
 }
 
