--- a/src/styles/menu.css
+++ b/src/styles/menu.css
@@ -36,14 +36,13 @@
 
 .menuCard {
     width: 200px;
-    height: 250px;
+    height: 280px;
     margin-bottom: 2em;
     border-radius: 15px;
     box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.6);
 }
 
 .imageCard {
-    background: url("../images/pizzas/pizza1.jpeg");
     height: 150px;
     border-radius: 15px 15px 0 0;
 }
@@ -87,12 +86,12 @@
 }
 
 .descriptionCard {
+    height: 98px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-between;
     margin: 1em auto;
-    gap: 1em;
 }
 
 .nameCard {
@@ -102,6 +101,10 @@
     color: var(--grayLight);
     font-size: 0.8em;
     font-weight: 600;
+}
+
+.nameCard h4 {
+    max-width: 6em;
 }
 
 .btnCard {
