--- a/src/styles/location.css
+++ b/src/styles/location.css
@@ -121,7 +121,7 @@ iframe {
 @media screen and (max-width: 700px){
     aside {
         flex-direction: column;
-        margin-bottom: 20em;
+        margin: 0 2em 20em;
     }
 
     #textReview, #imageReview {
